Add: - MovieController with two mappings; - MovieMapper; - MovieService and impl; - MovieRepository.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     username: root
-    url: jdbc:mysql://localhost:5000/Movieland
+    url: jdbc:mysql://localhost:5000/movieland
     password: user
