Add cache for mapping getAllGenres

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
     username: root
     url: jdbc:mysql://localhost:5000/movieland
     password: user
+
+caching:
+  spring:
+    genres: 14400000
