--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,17 @@
             <version>8.0.28</version>
         </dependency>
 
+        <!-- cache -->
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-spring</artifactId>
+            <version>5.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
 
         <!-- lombok -->
         <dependency>
