--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.0</version>
+        </dependency>
+
         <!-- DB -->
 <!--        <dependency>-->
 <!--            <groupId>mysql</groupId>-->
