--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
             <version>9.10.0</version>
         </dependency>
 
+        <!-- jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+
+
         <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
