--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,9 +1,9 @@
 spring:
   flyway:
     enabled: true
-    locations: classpath:db.migration
-#  jpa:
-#    properties:
-#      hibernate:
-#        format_sql: false
-#        show_sql: false
+    locations: classpath:db/migration, db/test
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
