--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-<!--            <version>9.10.0</version>-->
+            <version>42.5.1</version>
         </dependency>
 
         <!-- jackson-databind -->
@@ -76,7 +71,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -129,23 +124,29 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+<!--            <scope>test</scope>-->
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.flywaydb</groupId>
-                <artifactId>flyway-maven-plugin</artifactId>
-                <version>8.5.13</version>
-                <configuration>
-                    <configFiles>
-                        <configFile>flyway.conf</configFile>
-                    </configFiles>
-                    <locations>
-                        <location>filesystem:src/main/resources/db.migration</location>
-                    </locations>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.flywaydb</groupId>-->
+<!--                <artifactId>flyway-maven-plugin</artifactId>-->
+<!--                <version>8.5.13</version>-->
+<!--                <configuration>-->
+<!--                    <configFiles>-->
+<!--                        <configFile>flyway.conf</configFile>-->
+<!--                    </configFiles>-->
+<!--                    <locations>-->
+<!--                        <location>filesystem:src/main/resources/db.migration</location>-->
+<!--                    </locations>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
